navebar-logo class used UCGIS logo; added menu.brand translation key;

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -486,6 +486,7 @@ login:
   username: 'Username'
 
 menu:
+  brand: Body of Knowledge
   abbreviations: 'Definitions'
   admin: 'Administrators'
   analytics-dashboard: 'Analytics dashboard'
